--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mediapipe/selfie_segmentation": "^0.1.1632777926",
     "@mui/material": "^5.10.14",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
