--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.2.0",
+    "react-router-dom": "^6.4.3",
     "typescript": "^4.1.3"
   }
 }
